weather/media/style.css
div#center {
	text-align: center;
	max-width: 760px;
	min-width: 415px;
	width: 85%;
	overflow: auto;
	margin: 0 auto 0;
}

	#banner img {
		float: right;
	}

	#banner a img {
		float: left;
	}

	div#banner {
		background: url(http://weather.torproject.org/top-middle.png) repeat-x top left;
		width: 100%;
		overflow: auto;
	}

	div#main-column {
		padding: 15px 0 10px 10px;
		text-align: left;
		clear: both;
	}
	
		h1 {
			margin-top: 5px;
			padding-bottom: 10px;
			border-bottom: 1px solid black;
		}

		#sign-up-link {
			font-size: 20px;
			font-weight: bold;
			margin-bottom: 10px;
			display: block;
		}

		p {
			margin: 0 0 12px 0;
		}

		a {
			text-decoration: none;
		}

			a#sign-up-link {
				font-size: 25px;
			}
		 
			a:hover {
				text-decoration: underline;
			}	

		form {
			font-size: 14px;
		}
			
			form p {
				margin: 0 0 2px 0;
			}

			input {
				clear: both;
				margin: 2px 5px 3px 0;
			}

			fieldset {
				border: none;
				padding: 0 0 0 0;
				margin: 0 0 0 0;
			}

				#user-info {
					margin-bottom: 10px;
				}

				#user-info .field-container {
					float: left;
					margin-right: 15px;
				}

				#user-info label {
					display: block;
				}

					#user-info #fingerprint-container label {
						display: inline;
					}

					#user-info div#fingerprint-container {
						margin-right: 0;
					}

					div#fingerprint-row {
						overflow: hidden;
						clear: both;
						position: relative;
					}

					div#search-container {
						display: none;
						width: 350px;
						position: absolute;
						bottom: 0px;
						left: 400px;
						overflow: auto;
					}

					div#search-results {
						display: none;
					}

						#search-container label {
							padding: 0 0 0 36px;
						}

			.email-input {
				width: 185px;
			}

			#router_search {
				width: 300px;
			}

			.short-input {
				width: 100px;
				float: left;
			}

				.default-display {
					color: rgb(150, 150, 150);
				}

				.nondefault-display {
					color: black;
				}
			
			.long-input {
				width: 390px;
			}

			select {
				margin: 2px 4px 0 0;
				float: left;
			}

			.form-error {
				margin: 2px 0 1px 0;
				color: red;
				display: block;
			}

				#general-form-error {
					margin: 0 0 10px 0;
					font-weight: bold;
					display: block;
				}

			.checkbox-input {
				position: relative;
				top: 2px;
			}

			.extra-options {
				overflow: hidden;
				margin: 4px 0 4px 26px;
			}	

				.help-text {
					padding-top: 3px;
					display: block;
					color: rgb(100, 100, 100);
				}

				.extra-options label {
					display: block;
				}

				.after-short {
					padding: 4px 0 0 0;
					margin: 0 0 0 105px;
					display: block;
				}

				.extra-options div {
					margin: 3px 0 4px 0;
				}

				.extra-options p {
					margin: 0 0 0 0;
				}

				.extra-options ul {
					list-style-type: none;
					padding: 0 0 0 0;
					margin: 0 0 0 0;
				}

				.extra-options li {
					margin: 0 0 0 0;
				}

				.extra-options li input {
					position: relative;
					top: 2px;
					margin: 0 5px 0 5px;
				}

			#submit-button {
				font-size: 18px;
				margin-top: 25px;
			}
			
			#more-info {
				margin-left: 5px;
			}

		.footer {
			padding: 5px 0 0 0;
			margin: 25px 0 0 0;
			border-top: 1px solid rgb(100,100,100);
			color: rgb(100, 100, 100);
		}

			#weather-legal {
				font-style: italic;
				font-size: 14px;
				margin: 0 0 20px 0;
			}

			#trademark {
				text-align: center;
				font-size: 12px;
				margin: 0 0 1px 0;
			}

			#creative-commons {
				text-align: center;
				font-size: 12px;
				margin: 0 0 1px 0;
			}

